<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gateway Input</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_long">Longitude:</string>
    <string name="lbl_lat">Latitude:</string>
    <string name="lbl_gate">Gateway:</string>
    <string name="lbl_ipaddr">IP Address:</string>
    <string name="lbl_port">Port Number:</string>
    <string name="btn_action">Get Info</string><string name="btn_network">Send</string>

</resources>
